--- a/src/app/characters/characters.page.html
+++ b/src/app/characters/characters.page.html
@@ -4,14 +4,26 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content >
 
   <ion-list>
 
-    <ion-item *ngFor="let char of characters">
 
-      <ion-label>{{ char.name }}</ion-label>
-      <ion-label>{{ char.gender }}</ion-label> 
-    </ion-item>
+      <ion-card *ngFor="let char of characters">
+          <!--<img src="./../assets/images/person-icon.jpg" width= "5"/>-->
+          <ion-card-header>
+            <ion-card-subtitle>Character</ion-card-subtitle>
+            <ion-card-title>{{ char.name}}</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            gender: {{ char.gender }}
+          </ion-card-content>
+      </ion-card>
+
+      
   </ion-list>
+
+
+
+
 </ion-content>
