Setting up character details page: generated page component

--- a/src/app/characters/characters.page.html
+++ b/src/app/characters/characters.page.html
@@ -10,7 +10,8 @@
 
 
       <ion-card *ngFor="let char of characters">
-          <!--<img src="./../assets/images/person-icon.jpg" width= "5"/>-->
+        <!--<ion-img src="./../assets/images/person-icon.jpg" ></ion-img>-->
+          
           <ion-card-header>
             <ion-card-subtitle>Character</ion-card-subtitle>
             <ion-card-title>{{ char.name}}</ion-card-title>
