Setting up Character Details - injected character service into character-detail.page component

--- a/src/app/characters/character-detail/character-detail.page.html
+++ b/src/app/characters/character-detail/character-detail.page.html
@@ -5,5 +5,13 @@
 </ion-header>
 
 <ion-content>
+  <ion-grid>
+
+    <ion-row>
+      <ion-col>
+        <h1>{{loadedCharacter.name}}</h1>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
