Setting up Character List - Integrated API request to SWAPI into characters.service (Does not work as app doesn't register change to list when data is returned from API)

--- a/src/app/characters/character-detail/character-detail.page.html
+++ b/src/app/characters/character-detail/character-detail.page.html
@@ -3,7 +3,7 @@
       <ion-buttons slot="start">
           <ion-back-button defaultHref="/characters"></ion-back-button>
         </ion-buttons>
-    <ion-title>character-detail</ion-title>
+    <ion-title>character {{ loadedCharacter.id }} detail</ion-title>
   </ion-toolbar>
 </ion-header>
 
