--- a/src/app/characters/characters.page.html
+++ b/src/app/characters/characters.page.html
@@ -13,7 +13,7 @@
         <!--<ion-img src="./../assets/images/person-icon.jpg" ></ion-img>-->
           
           <ion-card-header>
-            <ion-card-subtitle>Character</ion-card-subtitle>
+            <ion-card-subtitle>Character {{ char.id }}</ion-card-subtitle>
             <ion-card-title>{{ char.name}}</ion-card-title>
           </ion-card-header>
           <ion-card-content>
