--- a/src/app/characters/character-detail/character-detail.page.html
+++ b/src/app/characters/character-detail/character-detail.page.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-toolbar>
       <ion-buttons slot="start">
+          <ion-menu-button>
+    
+          </ion-menu-button>
+        </ion-buttons>
+      <ion-buttons slot="start">
           <ion-back-button defaultHref="/characters"></ion-back-button>
         </ion-buttons>
     <ion-title>character {{ loadedCharacter.id }} detail</ion-title>
